# stock_market_insights

./: .gitignore  README.md  data_insights.py  dataset_builder.py  feature_dataset_builder.py  finance.py  main.py  pyproject.toml
feature_dataset/: feature_dataset.csv  feature_dataset_metadata.json
stock_datalake/: AAPL_1.csv  AAPL_10.csv  AAPL_11.csv  AAPL_12.csv  AAPL_13.csv  AAPL_14.csv  AAPL_15.csv  AAPL_16.csv  AAPL_17.csv  AAPL_18.csv  AAPL_19.csv  AAPL_2.csv  AAPL_20.csv  AAPL_20140101_20241231.csv  AAPL_21.csv  AAPL_22.csv  AAPL_23.csv  AAPL_24.csv  AAPL_25.csv  AAPL_26.csv  AAPL_27.csv  AAPL_28.csv  AAPL_29.csv  AAPL_3.csv  AAPL_30.csv  AAPL_31.csv  AAPL_32.csv  AAPL_33.csv  AAPL_34.csv  AAPL_35.csv  AAPL_36.csv  AAPL_37.csv  AAPL_38.csv  AAPL_39.csv  AAPL_4.csv  AAPL_40.csv  AAPL_41.csv  AAPL_42.csv  AAPL_43.csv  AAPL_44.csv  (+216 more)
utils/: reportify.py
