[project]
name = "stock-market-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance==1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.16.3",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.4.5"
    ]
